@@ -104,12 +104,6 @@ Fix this, and accept the introduced cruft.   Tnx Wessel.
 - Phase out support for services_eth0_udp, but enforce ipS_eth0; warn for
 obsolete syntax
 
-- Be less anal on borken rc file:
-za 29 09:12 < Fruit> warnings als een variabele ongedefinieerd is
-za 29 09:13 < Fruit> services_tcp_eth0="foo"
-za 29 09:13 < Fruit> warning: ports_foo_eth0 is undefined
-za 29 09:16 < Fruit> case ${ports_foo_eth0-UNDEF} in UNDEF) warn; esac
-
 
 ----------------- end of candidates for upcoming release ------------------
 ----------------- stuff which just might happen one day -------------------
